<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8CCED9"
            tools:context=".patient_activities.ContactsClinicActivity">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8CCED9"
        android:paddingBottom="10dp"
        tools:context="com.android.clinic.patient_activities.ContactsClinicActivity">

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="@string/address"
            android:textColorHint="@color/colorRed"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/email"
            android:textColorHint="@color/colorRed"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@+id/address"/>

        <TextView
            android:id="@+id/telephon_spravochnoj"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephon_spravochnoj"
            app:layout_constraintTop_toBottomOf="@+id/email"/>

        <TextView
            android:id="@+id/telephon_spravochnoj_1"
            style="@style/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephon_spravochnoj_1"
            app:layout_constraintTop_toBottomOf="@id/telephon_spravochnoj"
            />

        <TextView
            android:id="@+id/telephon_spravochnoj_2"
            style="@style/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephon_spravochnoj_2"
            app:layout_constraintTop_toBottomOf="@id/telephon_spravochnoj_1"
            />

        <TextView
            android:id="@+id/telephon_registratury"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephon_registratury"
            app:layout_constraintTop_toBottomOf="@+id/telephon_spravochnoj_2"
            />

        <TextView
            android:id="@+id/telephon_registratury_1"
            style="@style/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephon_registratury_1"
            app:layout_constraintTop_toBottomOf="@id/telephon_registratury"
            />

        <TextView
            android:id="@+id/call_doctor"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor"
            app:layout_constraintTop_toBottomOf="@+id/telephon_registratury_1"
            />

        <TextView
            android:id="@+id/call_doctor_1"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor_1"
            app:layout_constraintTop_toBottomOf="@+id/call_doctor"
            />

        <TextView
            android:id="@+id/call_doctor_number_1"
            style="@style/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor_number_1"
            app:layout_constraintTop_toBottomOf="@id/call_doctor_1"
            />

        <TextView
            android:id="@+id/call_doctor_2"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor_2"
            app:layout_constraintTop_toBottomOf="@+id/call_doctor_number_1"
            />

        <TextView
            android:id="@+id/call_doctor_number_2"
            style="@style/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor_number_2"
            app:layout_constraintTop_toBottomOf="@+id/call_doctor_2"
            />

        <TextView
            android:id="@+id/call_doctor_holiday"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor_holiday"
            app:layout_constraintTop_toBottomOf="@+id/call_doctor_number_2"
            />

        <TextView
            android:id="@+id/call_doctor_holiday_number_1"
            style="@style/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor_holiday_number_1"
            app:layout_constraintTop_toBottomOf="@+id/call_doctor_holiday"
            />

        <TextView
            android:id="@+id/call_doctor_3"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_doctor_3"
            app:layout_constraintTop_toBottomOf="@+id/call_doctor_holiday_number_1"
            />

        <TextView
            android:id="@+id/hot_line"
            style="@style/Iext_to_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hot_line"
            app:layout_constraintTop_toBottomOf="@+id/call_doctor_3"
            />

        <TextView
            android:id="@+id/hot_line_number"
            style="@style/Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hot_line_number"
            app:layout_constraintTop_toBottomOf="@+id/hot_line"
            />

        <Button
            android:id="@+id/official_site"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@color/color2"
            android:gravity="center"
            android:hint="@string/ofcite"
            android:textColorHint="@color/colorDark"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hot_line_number"
            />
    </android.support.constraint.ConstraintLayout>
</ScrollView>