<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.android.clinic.PasswordActivity">

    <TextView
        android:id="@+id/get_into"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/get_into_system"
        android:paddingTop="70dp"
        android:paddingBottom="30dp"
        android:textColorHint="@color/colorDark"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/get_into"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:foregroundGravity="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/password">

        <Button
            android:id="@+id/registration"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/color2"
            android:hint="@string/registration"
            android:textColorHint="@color/colorDark"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"/>

        <Button
            android:id="@+id/into"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/color2"
            android:hint="@string/get_into"
            android:textColorHint="@color/colorDark"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@id/registration"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"/>
    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/color2"
        android:hint="@string/continue_guest"
        android:textColorHint="@color/colorDark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</android.support.constraint.ConstraintLayout>
