<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.android.clinic.doctor_activities.FillPatientCardActivity">

    <TextView
        android:id="@+id/fio_patient_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/fio_patient"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/fio_patient_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDark"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/fio_patient_TextView"/>

    <TextView
        android:id="@+id/time_visit_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_visit"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/fio_patient_View"/>

    <TextView
        android:id="@+id/time_visit_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDark"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/time_visit_textView"/>

    <RelativeLayout
        android:id="@+id/diagnosis_Layout"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/time_visit_View">

        <TextView
            android:id="@+id/diagnosis_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnosis1"
            android:textSize="20dp"
            />

        <ImageView
            android:id="@+id/image_add_diagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/diagnosis_TextView"
            android:src="@drawable/plus2"
            />
    </RelativeLayout>


    <TextView
        android:id="@+id/diagnosis_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/diagnosis_Layout"/>

    <TextView
        android:id="@+id/note_doctor_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_doctor"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/diagnosis_View"/>

    <EditText
        android:id="@+id/note_doctor_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/note_doctor_TextView"/>

    <Button
        android:id="@+id/send_diagnosis_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_doctor_EditText"/>
</android.support.constraint.ConstraintLayout>
