<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            tools:context=".doctor_activities.MenuDoctorsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gorpol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp"
            android:paddingTop="50dp"
            android:src="@drawable/logo_40"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gorpol"
            android:background="@color/background"
            android:hint="@string/sign_to_me"
            android:padding="10dp"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/shankTickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp"
            android:background="@color/background"
            android:hint="@string/shank_tickets"
            android:padding="10dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/resultDiagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/shankTickets"
            android:background="@color/background"
            android:hint="@string/diagnosis_by_me"
            android:padding="10dp"
            android:textSize="30dp"/>
    </RelativeLayout>
</ScrollView>