<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".RegistrationActivity">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.android.clinic.GetPrivateDataActivity">

        <TextView
            android:id="@+id/enter_phone_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="70dp"
            android:text="@string/enter_phone"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/enter_phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/enter_phone_textView"/>

        <Button
            android:id="@+id/myDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myData"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_phone_editText"/>

        <TextView
            android:id="@+id/yourLoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/your_login"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/myDataButton"/>

        <TextView
            android:id="@+id/yourLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/yourLoginTextView"
            />

        <TextView
            android:id="@+id/yourPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/your_password"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/yourLogin"/>

        <TextView
            android:id="@+id/yourPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/yourPasswordTextView"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>